section with subfolders... (folders / authors)

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,4 +35,5 @@ blockquote ul { font-size: 85%!important; margin-left: 20px; }
 .blurbs-container { background: radial-gradient(circle closest-side at 50% 45%, rgb(72 186 118) 0%,rgb(155 60 161 / 80%) 100%,rgb(66 26 82) 500%); }
 
 .above-footer .menu a { display: block; padding: 3px 8px 3px 8px; }
-.above-footer .menu .selected { background-color: #94559B; color: #fff; }
+.above-footer .menu a.selected { background-color: #94559B; color: #fff; }
+.above-footer .menu h2.selected { border-bottom: 3px solid #94559B; }
