--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,7 +28,9 @@
 .video-container { position: relative; width: 100%; height: 0; padding-bottom: 56.25%; margin-bottom: 20px; }
 .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
+/* content */
 blockquote ul { font-size: 85%!important; margin-left: 20px; }
+audio.full-width, video.full-width { width: 100%; }
 
 .blurbs-container { margin-top: 20px; height: calc(100% - 80px); }
 
