--- a/assets/styles.css
+++ b/assets/styles.css
@@ -29,11 +29,14 @@
 .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 /* content */
+h1.heading { border-bottom: 3px solid #666; background-color: #94559B; padding: 6px; margin-bottom: 15px; font-size: 120%; }
+
 blockquote ul { font-size: 85%!important; margin-left: 20px; }
-audio.full-width, video.full-width { width: 100%; }
+
+audio.full-width, video.full-width, iframe.full-width, img.full-width { width: 100%; }
+iframe.full-width, .full-height { height: 95vh; }
 
 .blurbs-container { margin-top: 20px; height: calc(100% - 80px); }
-
 .blurbs-container { background: radial-gradient(circle closest-side at 50% 45%, rgb(72 186 118) 0%,rgb(155 60 161 / 80%) 100%,rgb(66 26 82) 500%); }
 
 .above-footer .menu a { display: block; padding: 3px 8px 3px 8px; }
