--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,13 +7,24 @@
 
 .amadeus-credits img { vertical-align: middle!important; } /* TODO: how to change in theme */
 
+ul.contents { list-style-type: none; margin-bottom: 40px; border: 3px solid #A46EAA; }
+ul.contents .selected { background-color: #FAF05A; }
+ul.contents .indent-h1 { padding-left: 20px; }
+ul.contents .indent-h2 { padding-left: 40px; }
+ul.contents .indent-h3 { padding-left: 60px; }
+
+#content .go-to-toc { cursor: pointer; }
+/* https://www.w3schools.com/howto/howto_css_arrows.asp */
+.arrow { border: solid black; border-width: 0 3px 3px 0; display: inline-block; padding: 3px; }
+.arrow.up { transform: rotate(-135deg); -webkit-transform: rotate(-135deg); }
+
 .tm-main blockquote { margin-left: 10px; border-left: 6px solid #666; padding: 15px; }
 .tm-main h1:not(.heading) { margin-top: 40px; }
 .tm-main h2, .tm-main h3 { margin-top: 20px; }
 
 a.hilight { background-color: #FAF05A; padding: 12px; border-radius: 12px; font-weight: bold; color: #D71459; }
 div.banner { text-align: center; background-color: #E3A09B; padding: 15px; }
-.above-footer div.banner { background-color: #A09BE3; }
+.above-footer div.banner { margin-top: 30px; background-color: #A09BE3; }
 
 .files .selected { background-color: rgb(130,198,142); }
 .files a { display: block; }
