--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,7 +26,9 @@ ul.contents .indent-h3 { padding-left: 60px; }
 .tm-main h2, .tm-main h3 { margin-top: 20px; }
 
 a.hilight { background-color: #FAF05A; padding: 4px 8px 4px 8px; border-radius: 8px; font-weight: bold; color: #D71459; }
-div.banner { text-align: center; background-color: #E3A09B; padding: 15px; }
+div.banner { text-align: center; background-color: #E3A09B; }
+div.banner:not(.below) { padding: 15px; }
+div.banner.below p { color: #94559B; font-weight: bold; font-size: small; letter-spacing: 2px; }
 .above-footer div.banner { margin-top: 30px; background-color: #A09BE3; }
 
 .files .selected { background-color: rgb(130,198,142); }
