--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,15 @@ ul.contents .indent-h1 { padding-left: 20px; }
 ul.contents .indent-h2 { padding-left: 40px; }
 ul.contents .indent-h3 { padding-left: 60px; }
 
+
+.box-colour-2018, .box-colour-one, .box-colour-two, .box-colour-three, .box-colour-four { padding: 20px; }
+
+.box-colour-2018 { background-color: #FFDC73; }
+.box-colour-one { background-color: #CCFF66; }
+.box-colour-two { background-color: #D785D1; }
+.box-colour-three { background-color: #B6ADFF; }
+.box-colour-four { background-color: #CEEAFF; }
+
 #content .go-to-toc { cursor: pointer; }
 /* https://www.w3schools.com/howto/howto_css_arrows.asp */
 .arrow { border: solid black; border-width: 0 3px 3px 0; display: inline-block; padding: 3px; }
