--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -1,8 +1,7 @@
 .footer-static-box {
-	display: block;
+	display: none;
 	position: fixed;
 	width: 100%;
-	height: 56px;
 	bottom: 0;
 	left: 0;
 	padding: 0;
@@ -14,5 +13,12 @@
 	transform: translateZ(0);
 }
 
+.footer-static-box.show {
+	display: block;
+}
+
 .footer-static-box { background-color: #4CBD20; color: #fff; text-align: center; }
 .footer-static-box a { color: #fff; font-weight: bold; }
+
+.footer-static-box .links-of-5 a { display: inline-block; width: 18%; }
+.area-links .selected { background-color: #efe; color: #4CBD20; }
