--- a/assets/styles.css
+++ b/assets/styles.css
@@ -18,7 +18,6 @@ ul.contents .indent-h1 { padding-left: 20px; }
 ul.contents .indent-h2 { padding-left: 40px; }
 ul.contents .indent-h3 { padding-left: 60px; }
 
-
 .box-colour-2018, .box-colour-one, .box-colour-two, .box-colour-three, .box-colour-four { padding: 5px; }
 
 .box-colour-2018 { background-color: #FFDC73; }
@@ -68,6 +67,8 @@ div.banner.below p { color: #94559B; font-weight: bold; font-size: small; letter
 h1.heading { border-bottom: 3px solid #666; background-color: #94559B; padding: 6px; margin-bottom: 15px; font-size: 120%; }
 .breadcrumbs a { color: #ff0; }
 .breadcrumbs .home { background:  url(../icon-yieldmore.png) left center no-repeat;  background-size: contain; padding-left: 35px; }
+ol.menu ol { border-left: 1px dashed maroon; padding-left: 30px; margin-left: 0px; }
+.section-menu a { display: block; padding: 6px; }
 
 blockquote ul { font-size: 85%!important; margin-left: 20px; }
 
@@ -80,5 +81,5 @@ iframe.full-width, .full-height { height: 95vh; }
 .blurbs-container { background: radial-gradient(circle closest-side at 50% 45%, rgb(72 186 118) 0%,rgb(155 60 161 / 80%) 100%,rgb(66 26 82) 500%); }
 
 .above-footer .menu a { display: block; padding: 3px 8px 3px 8px; }
-.above-footer .menu a.selected { background-color: #94559B; color: #fff; }
+.above-footer .menu a.selected, .section-menu a.selected { background-color: #94559B; color: #fff; }
 .above-footer .menu h2.selected { border-bottom: 3px solid #94559B; }
